# liteLLM-proxy

./: .env  .env.template  .gitignore  Dockerfile  LICENSE  README.md  Taskfile.yaml  fly.toml  litellm_uuid.txt  llm.py  main.py  pyproject.toml  railway.json  readme.md  request_logs.json  requirements.txt  test_proxy.py  test_proxy_stream.py  utils.py
.github/workflows/: cd.yaml  ci.yaml  cicd.yaml
admin-dashboard/: package-lock.json  package.json  tailwind.config.js
admin-dashboard/src/app/: globals.css  page.js
admin-dashboard/src/app/api/: route.js
admin-dashboard/src/app/components/: Logs.js  Navbar.js  Table.js
integrations/: sentry.py  tinydb.py
proxy/: llm.py  main.py  utils.py
tests/: test_health.py  test_proxy.py
